# ChangeLog for games-util/glbsp
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-util/glbsp/ChangeLog,v 1.7 2008/02/29 19:51:49 carlo Exp $

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> glbsp-2.20.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

*glbsp-2.20 (11 Oct 2006)

  11 Oct 2006; Tristan Heaven <nyhm@gentoo.org> +glbsp-2.20.ebuild:
  Version bump by Davide Cendron, bug #146732

  16 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

*glbsp-2.10 (13 May 2005)

  13 May 2005; Michael Sterrett <mr_bones_@gentoo.org> +glbsp-2.10.ebuild:
  version bump (bug #89889)

  28 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Gentoo Technologies, Inc. -> Gentoo Foundation

  21 Jul 2004; David Holm <dholm@gentoo.org> glbsp-2.05.ebuild:
  Added to ~ppc.

*glbsp-2.05 (20 Jul 2004)

  20 Jul 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Hinrik Örn Sigurðsson #53793.