@@ -1,6 +1,9 @@
 # ChangeLog for games-util/glbsp
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/glbsp/ChangeLog,v 1.7 2008/02/29 19:51:49 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-util/glbsp/ChangeLog,v 1.8 2008/11/14 18:48:23 coldwind Exp $
+
+  14 Nov 2008; Santiago M. Mola <coldwind@gentoo.org> glbsp-2.20.ebuild:
+  Restrict fltk dependency to SLOT 1.1 (bug #246445).
 
   29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> glbsp-2.20.ebuild:
   Remove icon extension from desktop entry to match Icon Theme Specification.
